# aimformat

./: .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  REVIEW.md  pyproject.toml  spec.md
.claude/: settings.json
.claude-plugin/: marketplace.json  plugin.json
.claude/skills/: aimformat
.github/workflows/: ci.yml  claude.yml  publish.yml
docs/: README.md  for-agents.md
docs/guide/: getting-started.md
docs/knowledge/: README.md  architecture.md
docs/log/: 2026-07-06_2013_decision_utc-log-timestamps.md  2026-07-07_1619_plan_spec-v01-and-reference-toolkit.md  2026-07-07_1659_decision_v01-open-points-resolved.md  2026-07-07_1659_report_v01-shipped.md  2026-07-07_1921_review_v01-deep-self-review.md  2026-07-07_2243_plan_converters.md  2026-07-08_0626_plan_reconcile.md  2026-07-09_2312_plan_normalize-cli-and-inline-ingest.md  2026-07-10_0414_decision_agent-native-surfaces.md  2026-07-10_1245_plan_fixed-layout-pages.md  2026-07-10_1646_decision_amend-proposal.md  2026-07-16_1259_report_review-round2-exporter-mcp-fixes.md  2026-07-16_1334_review_pptx-codex-final-round.md  2026-07-16_1539_plan_claude-review-ci.md  2026-07-17_0907_plan_codex-pr12-followups.md  2026-07-17_1148_plan_af-06-canonical-self-closing.md  2026-07-17_1209_plan_af-06-c002-review-fixes.md  2026-07-17_1226_plan_af-06-empty-registry-svg.md  2026-07-17_1240_plan_af-06-final-review-findings.md  2026-07-17_1308_plan_review-cleanup-batch.md  2026-07-17_1334_plan_pr14-codex-followups.md  2026-07-17_1353_plan_pr14-codex-round2-followups.md  2026-07-17_1419_plan_pr14-codex-round3-minors.md  2026-07-17_1447_plan_postmerge-pr12-pr13-review-fixes.md  2026-07-17_1535_plan_reader-ts.md  2026-07-17_1610_plan_r-af-1-history-index.md  2026-07-17_1623_plan_pr14-codex-empty-list-followup.md  2026-07-17_1630_review_codex-ts-reader-fixes.md  2026-07-17_1643_plan_revalidate-rebound-chained-add-anchors.md  2026-07-17_1659_plan_pr14-blank-pending-slide-boundary.md  2026-07-17_1716_plan_pr15-p2-postmerge-fixes.md  2026-07-17_1742_plan_pr15-r2-inbound-moves-trail-modify.md  2026-07-17_1806_plan_pr15-p1-per-pair-precedence-and-move-cycle-guard.md  2026-07-17_1847_plan_pr15-p1-repeated-moves-before-erasing-modify.md  2026-07-17_1916_plan_pr15-constraint-ordering-property.md  2026-07-17_1946_plan_pr15-move-delete-and-linear-ordering.md  2026-07-17_2018_plan_pr15-cross-target-move-anchor-constraints.md  2026-07-17_2042_plan_pr15-r9-complete-ordering-model.md  2026-07-17_2304_plan_pending-lane-creation-order.md  2026-07-17_2356_review_postmerge-sweep-adversarial.md  (+16 more)
evals/: README.md  id_preservation.py
examples/: README.md  booklet.aim  deck.aim  proposal.aim
scripts/: claude-check.sh  dump_projection.py  gen_examples.py  gen_fixtures.py  gen_parity_fixtures.py  gen_spec_appendix.py  gen_ts_registry.py  new_log_entry.py
skills/aimformat/: SKILL.md
skills/aimformat/references/: format.md  sdk.md
src/aimformat/: __init__.py  canonical.py  cli.py  css.py  document.py  dom.py  errors.py  events.py  export_docx.py  ids.py  ingest.py  lint.py  mcp.py  note.py  pagesetup.py  paint.py  reconcile.py  registry.json  registry.py
src/aimformat/convert/: __init__.py  _docx_in.py  _docx_pages.py  _docx_seam.py  _html_out.py  _markdown_in.py  _markdown_out.py  _pdf_out.py
tests/: conftest.py  test_canonical.py  test_cli.py  test_convert.py  test_css_assets_meta.py  test_document_ops.py  test_docx_import.py  test_dom_and_ids.py  test_examples.py  test_fixtures.py  test_history.py  test_history_index_properties.py  test_history_scaling.py  test_ingest_export.py  test_ingest_inline.py  test_lint.py  test_mcp.py  test_note.py  test_pagesetup.py  test_paint.py  test_parity_goldens.py  test_properties.py  test_properties_review.py  test_proposals.py  test_reconcile.py  test_resolution_order_properties.py  test_review_regressions.py  test_spec.py  test_ts_registry.py  test_typography.py
tests/fixtures/: nok_C001_not_canonical.aim  nok_C002_self_closing_non_void.aim  nok_D001_malformed_doc_settings.aim  nok_D002_duplicate_doc_settings.aim  nok_D003_unknown_page_size.aim  nok_D004_margin_out_of_bounds.aim  nok_D005_page_break_not_empty.aim  nok_D006_page_break_nested.aim  nok_H006_history_chain_broken.aim  nok_M003_malformed_meta_cache.aim  nok_P008_proposal_unknown_target.aim  nok_P014_empty_proposals_section.aim  nok_S001_missing_version.aim  nok_S003_missing_charset.aim  nok_S004_missing_title.aim  nok_S007_body_comment.aim  nok_S011_uncovered_body_child.aim  nok_S012_chunk_and_container.aim  nok_S016_id_reused_across_parents.aim  nok_S017_run_not_consecutive.aim  nok_S023_uncovered_item.aim  nok_S024_nested_chunk.aim  nok_S025_stray_container_text.aim  nok_S030_duplicate_note.aim  nok_S031_slide_as_chunk.aim  nok_S032_paint_under_prior_version.aim  nok_V002_unknown_element.aim  nok_V004_arbitrary_value_class.aim  nok_V005_unknown_class.aim  nok_V007_style_outside_whitelist.aim  nok_V011_unknown_theme_slot.aim  nok_X002_event_handler.aim  nok_X004_executable_script.aim  ok_document.aim  ok_flattened.aim  ok_lifecycle.aim  ok_minimal.aim  ok_pagination.aim  ok_paint.aim  ok_prior_version.aim  (+3 more)
tests/parity/fixtures/: assets.aim  empty-registry.aim  flattened.aim  nested-slides.aim  noncanonical-charrefs.aim  noncanonical-dup-attrs.aim  noncanonical-dup-ids.aim  noncanonical-dup-top-level.aim  noncanonical-rawtext-closes.aim  noncanonical-self-closing.aim  noncanonical-unicode-margins.aim  paint.aim  proposals.aim  runs.aim  theme-doc-meta.aim  unicode-attrs.aim  unicode-whitespace.aim
tests/parity/goldens/: assets.json  booklet.json  conformance-hashes.json  deck.json  empty-registry.json  flattened.json  nested-slides.json  noncanonical-charrefs.json  noncanonical-dup-attrs.json  (+12 more)
ts/: .prettierignore  README.md  package-lock.json  package.json  tsconfig.json
ts/src/: canonical.ts  document.ts  dom.ts  errors.ts  index.ts  parser.ts  registry.data.ts  sha256.ts
ts/test/: canonical.test.ts  container-lazy-html.test.ts  document.test.ts  parity.test.ts  parser.test.ts  sha256.test.ts
