[build-system]
requires = ["hatchling>=1.26"]
build-backend = "hatchling.build"

[project]
name = "aimformat"
dynamic = ["version"]
description = "Reference SDK and verifier for the .aim document format — AI proposals and human accept/reject as file primitives"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.10"
authors = [{ name = "Luca Campanella" }]
keywords = ["aim", "document-format", "llm", "track-changes", "html"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Text Processing :: Markup :: HTML",
]
# Zero runtime dependencies — stdlib only, by design.
dependencies = []

[project.optional-dependencies]
# DOCX export (aim.to_docx); the core package stays dependency-free
docx = ["python-docx==1.2.0"]
# Converters (aimformat.convert): each direction pulls only what it needs
markdown = ["markdown-it-py==4.2.0"]           # from_markdown
ingest = ["docling==2.110.0"]                  # from_docx / from_pdf
pdf = ["playwright==1.61.0"]                   # to_pdf (+ playwright install chromium)
convert = ["markdown-it-py==4.2.0", "docling==2.110.0", "python-docx==1.2.0"]
# MCP server; upstream advises staying below 2.0
mcp = ["mcp==1.28.1"]
dev = ["pytest==9.1.1", "python-docx==1.2.0", "docling-core==2.86.0",
       "markdown-it-py==4.2.0", "mcp==1.28.1", "ruff==0.15.21",
       "mypy==2.2.0", "hypothesis==6.156.4"]

[project.scripts]
aim = "aimformat.cli:main"
# Collision-proof alias: PyPI's `aim` (AimStack) also installs an `aim` CLI,
# and it makes `uvx aimformat` resolve to this tool.
aimformat = "aimformat.cli:main"

[project.urls]
Homepage = "https://github.com/tndmhq/aimformat"
Specification = "https://github.com/tndmhq/aimformat/blob/main/spec.md"
Repository = "https://github.com/tndmhq/aimformat"
Issues = "https://github.com/tndmhq/aimformat/issues"
Changelog = "https://github.com/tndmhq/aimformat/blob/main/CHANGELOG.md"

[tool.hatch.version]
path = "src/aimformat/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["src/aimformat"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py310"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B"]

[tool.mypy]
# Lenient start; strictness ratchets per-module (WS1 decision, plan 2026-07-09).
python_version = "3.10"
files = ["src"]
ignore_missing_imports = true
check_untyped_defs = true
warn_unused_ignores = true
warn_redundant_casts = true
no_implicit_optional = true

[[tool.mypy.overrides]]
# Optional-dependency imports (converters/ingest/export) — typed as Any so the
# zero-dependency core checks cleanly whether or not the extras are installed.
module = [
  "docling.*",
  "docling_core.*",
  "docx.*",
  "markdown_it.*",
  "numpy.*",
  "playwright.*",
]
follow_imports = "skip"
ignore_missing_imports = true

[[tool.mypy.overrides]]
# Lenient start (WS1 decision, plan 2026-07-09): these modules pre-date typing
# and still have Optional-narrowing debt. Ratchet: remove a module from this
# list (and fix what surfaces) rather than ever adding one.
module = [
  "aimformat.document",
  "aimformat.export_docx",
  "aimformat.ingest",
  "aimformat.lint",
  "aimformat.reconcile",
]
disable_error_code = [
  "arg-type",
  "assignment",
  "list-item",
  "operator",
  "type-var",
  "union-attr",
]
